Add footer-left styles for layout adjustments
Add styles for footer-left to improve layout.

--- a/css/main.css
+++ b/css/main.css
@@ -775,11 +775,17 @@ background: #EE877C;
    margin-bottom: 30px;
 }
 
+.footer-left {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
 #footer-center {
 text-align:center;
 .a {
   color:inherit;
-}
+  }
 }
 
 #footer-center a{
