--- a/css/main.css
+++ b/css/main.css
@@ -812,17 +812,31 @@ background: #EE877C;
 
 @media (max-width: 768px) {
   .footer-content {
-    grid-template-columns: 1fr;
+	display: flex;
+    flex-direction: column;     /* було не задано -> тому лишався ряд */
+    align-items: center;        /* центруємо секції */
     text-align: center;
   }
 
  .footer-left {
     flex-direction: column;
+	align-items: center;
+    min-width: 0;
+  }
+
+ #footer-center {
+    text-align: center;
   }	
 
-  .footer-right {
+  #footer-right {
     text-align: center;
   }
+
+ .footer #footer-right .item {
+    display: flex;
+    justify-content: center;    /* іконки по центру */
+    gap: 12px;
+  }	
 
   .footer-logo-payments {
     justify-content: center;
