--- a/css/main.css
+++ b/css/main.css
@@ -830,7 +830,7 @@ background: #EE877C;
     	margin-bottom: 0;
   	}
 
- 	.footer-left {
+ 	#footer-left {
     	flex-direction: column;
 		align-items: center;
 		gap: 12px;
@@ -845,12 +845,9 @@ background: #EE877C;
  	}	
 	
   	.footer-logo-payments {
-    	display: flex;
     	flex-direction: column;
     	align-items: center;
-    	justify-content: center;
     	gap: 10px;
-    	margin-left: 0;
   	}
 
 	.footer #footer-right .item {
