--- a/css/media.css
+++ b/css/media.css
@@ -1,8 +1,8 @@
 /* Desktop */
 @media (min-width: 1024px) {
   section:not(.s1) {
-    padding-top: 64px;
-    padding-bottom: 64px;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 
   .container {
@@ -11,12 +11,16 @@
   }
 
   .s1 {
-    padding-top: 80px;
-    padding-bottom: 64px;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 
   .s1 h3 {
     font-size: 24px;
+  }
+
+  .s1 h1 {
+    font-size: 52px;
   }
 
   .s1 .container {
@@ -24,7 +28,6 @@
     align-items: center;
     column-gap: 56px;
     row-gap: 0;
-    max-width: 1536px;
   }
 
   .s1 .content {
@@ -35,25 +38,36 @@
     grid-column: 2;
   }
 
+  .s4 .container {
+    max-width: 1170px;
+    margin: 0 auto;
+    padding-left: 48px;
+    padding-right: 48px;
+  }
+
 }
 
 /* Tablet */
 @media (min-width: 601px) and (max-width: 1023px) {
   section:not(.s1) {
-    padding-top: 64px;
-    padding-bottom: 64px;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
   section:not(.s1) h2 {
     font-size: 32px;
   }
 
   .s1 {
-    padding-top: 128px;
-    padding-bottom: 96px;
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 
   .s1 h3 {
     font-size: 24px;
+  }
+
+  .s1 h1 {
+    font-size: 52px;
   }
 
   .s1 .container {
@@ -62,8 +76,19 @@
     gap: 0;
   }
 
+  .s4 .container {
+    max-width: 750px;
+    margin: 0 auto;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
   .s1 .img {
-    margin-top: 48px;
+    margin-top: 32px;
+  }
+
+  .s1 .img.desk {
+    margin-top: 32px;
   }
 
   .s4 .items {
@@ -78,6 +103,15 @@
 
 /* Mobile */
 @media (max-width: 600px) {
+  section {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  .s1 {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
   section:not(.s1) h2 {
     font-size: 30px;
     text-align: center;
@@ -111,7 +145,7 @@
     max-height: 320px;
     object-fit: contain;
     border-radius: 24px;
-    margin-top: 48px;
+    margin-top: 32px;
     background: transparent;
   }
 
@@ -123,7 +157,7 @@
   }
 
   .s1 h1 {
-    font-size: 36px;
+    font-size: 34px;
     line-height: 1.06;
     margin-top: 24px;
   }
@@ -132,6 +166,11 @@
     font-size: 20px;
     line-height: 1.45;
     font-weight: 500;
+    margin-top: 24px;
+  }
+
+  .s1 .s1-preprice {
+    text-align: center;
   }
 
   .s1 .benefits-block > p {
@@ -139,6 +178,10 @@
     line-height: 1.6;
     color: #000000;
     font-weight: 500;
+  }
+
+  .s1 .benefits-block {
+    margin-top: 24px;
   }
 
   .benefits__item {
@@ -208,7 +251,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
-    gap: 20px;
+    gap: 0;
   }
 
   .s1 #divprice .price-note,
@@ -249,7 +292,7 @@
   }
 
   .help-why {
-    margin-top: 20px;
+    margin-top: 24px;
   }
 
   .help-why h3 {
